# aptos-commemorative-minter

./: Cargo.toml  README.md
data/: config.toml
src/: config.rs  constants.rs  main.rs  menu.rs  minter.rs  parser.rs  utils.rs
src/utils/: fetch.rs  files.rs  mod.rs
