[package]
name = "aptos-commemorative-minter"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
eyre = "0.6.12"
hex = "0.4.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.130"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
term_size = "0.3.2"
indicatif = "0.17.8"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
